Link para sobre.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>MusicDot</h1>
 
     <h2>Bem-vindo à MusicDot, seu portal de cursos de música online.</h2>
-  
+  <a href="sobre.html">Spbre a empresa</a>
     <ul>
         <li>Confira nossas promoções.<li>
         <li>Receba informações sobre nossos lançamentos por email.<li>
